--- a/index.html
+++ b/index.html
@@ -11,22 +11,37 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="js/script.js"></script>
+
+    <div class="out-animation-wrapper">
+        <nav class="main-nav">
+            <div class="hamburger">
+                <div class="hamburger-lines">
+                    <span class="hamburger-line"></span>
+                    <span class="hamburger-line"></span>
+                    <span class="hamburger-line"></span>
+                </div>
+                <span class="menu-text">Menu</span>
+            </div>
+
+            <ul class="main-menu">
+                <li class="main-menu-item"><a href="#about">O mnie</a></li>
+                <li class="main-menu-item"><a href="#skills">Umiejętności</a></li>
+                <li class="main-menu-item"><a href="#portfolio">Portfolio</a></li>
+                <li class="main-menu-item"><a href="#contact">Kontakt</a></li>
+            </ul>
+        </nav>
+    </div>
+
     <header class="main-header">
-        <div class="main-header-content">
+        <header class="main-header-content">
             <h1>Szymon Łukaszuk</h1>
             <hr>
             <p>Front End Developer</p>
-        </div>
+        </header>
     </header>
-
-    <nav class="main-menu">
-        <ul>
-       <li class="menu-item"><a href="#about">O mnie</a></li>
-       <li class="menu-item"><a href="#skills">Umiejętności</a></li>
-       <li class="menu-item"><a href="#portfolio">Portfolio</a></li>
-       <li class="menu-item"><a href="#contact">Kontakt</a></li>
-        </ul>
-    </nav>
 
     <section id="about" class="about">
         <div class="container">
