--- a/index.html
+++ b/index.html
@@ -153,15 +153,15 @@
             </header>
 
             <div class="portfolio-wrapper">
-                <a href="https://github.com/Silentius222/Projekty/tree/main/Projekt-SPA" class="portfolio-item">
+                <a href="https://silentius222.github.io/Projekt-SPA/" class="portfolio-item">
                     <img src="img/portfolio/photo-3.PNG" alt="Portfolio-item 1">
                     <h3>Strona SPA</h3>
                 </a>
-                <a href="https://github.com/Silentius222/SASS-zadanie" class="portfolio-item">
+                <a href="https://silentius222.github.io/SASS-zadanie/" class="portfolio-item">
                     <img src="img/portfolio/photo-2.PNG" alt="Portfolio-item 2">
                     <h3>Strona</h3>
                 </a>
-                <a href="https://github.com/Silentius222/ReactJS-Aplikacja-Crypto-rate" class="portfolio-item">
+                <a href="https://github.com/Silentius222/Aplikacja-CryptoRate" class="portfolio-item">
                     <img src="img/portfolio/photo-4.PNG" alt="Portfolio-item 3">
                     <h3>CryptoRate</h3>
                 </a>
@@ -169,7 +169,6 @@
                     <img src="img/portfolio/photo-1.PNG" alt="Portfolio-item 3">
                     <h3>SocialApp</h3>
                 </a>
-                
             </div>
         </div>
     </section>
